# Autoencoders-in-blackbox-optimization

./: .gitignore  AE.py  GP.py  LICENSE  VAE.py  cma_custom.py  coco_stuff.py  control.ipynb  data.7z  data.h5  elm.py  evo.py  example.py  gaussian_process.py  graph_it.py  main.py  models.py  pd_cols.py  plotting.py  progress_bar.py  pyproject.toml  ranks.py  rbf_layer.py  requirements.txt  storage.py
data/: df.npz
doe2vec/: doe2vec.py  doe2vec__.py  exp_bbob.py  models.py  reco.py  vae.py
doe2vec/modulesRandFunc/: generate_exp2fun.py  generate_exp2fun_.py
exdata/: doe.pickle  elm100.pickle  gp.pickle  nn3.pickle  no.pickle
exdata/doe/: bbobexp_f1.info  bbobexp_f10.info  bbobexp_f11.info  bbobexp_f12.info  bbobexp_f13.info  bbobexp_f14.info  bbobexp_f15.info  bbobexp_f16.info  bbobexp_f17.info  bbobexp_f18.info  bbobexp_f19.info  bbobexp_f2.info  bbobexp_f20.info  bbobexp_f21.info  bbobexp_f22.info  bbobexp_f23.info  bbobexp_f24.info  bbobexp_f3.info  bbobexp_f4.info  bbobexp_f5.info  bbobexp_f6.info  bbobexp_f7.info  bbobexp_f8.info  bbobexp_f9.info
exdata/elm100/: bbobexp_f1.info  bbobexp_f10.info  bbobexp_f11.info  bbobexp_f12.info  bbobexp_f13.info  bbobexp_f14.info  bbobexp_f15.info  bbobexp_f16.info  bbobexp_f17.info  bbobexp_f18.info  bbobexp_f19.info  bbobexp_f2.info  bbobexp_f20.info  bbobexp_f21.info  bbobexp_f22.info  bbobexp_f23.info  bbobexp_f24.info  bbobexp_f3.info  bbobexp_f4.info  bbobexp_f5.info  bbobexp_f6.info  bbobexp_f7.info  bbobexp_f8.info  bbobexp_f9.info
exdata/gp/: bbobexp_f1.info  bbobexp_f10.info  bbobexp_f11.info  bbobexp_f12.info  (+20 more)
(+364 files in other folders)
